--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <link rel=mask-icon href=https://ggp1.github.io/safari-pinned-tab.svg>
 <meta name=theme-color content="#2e2e33">
 <meta name=msapplication-TileColor content="#2e2e33">
-<meta name=generator content="Hugo 0.88.1">
+<meta name=generator content="Hugo 0.89.4">
 <link rel=alternate type=application/rss+xml href=https://ggp1.github.io/index.xml>
 <meta property="og:title" content="Gastón Palomeque">
 <meta property="og:description" content="Software developer">
@@ -27,7 +27,7 @@
 <meta name=twitter:image content="https://ggp1.github.io/%3Clink%20or%20path%20of%20image%20for%20opengraph,%20twitter-cards%3E">
 <meta name=twitter:title content="Gastón Palomeque">
 <meta name=twitter:description content="Software developer">
-<script type=application/ld+json>{"@context":"https://schema.org","@type":"Organization","name":"Gastón Palomeque","url":"https://ggp1.github.io/","description":"Software developer","thumbnailUrl":"https://ggp1.github.io/favicon.ico","sameAs":["https://github.com/GGP1","https://twitter.com/gastipalomeque"]}</script>
+<script type=application/ld+json>{"@context":"https://schema.org","@type":"Organization","name":"Gastón Palomeque","url":"https://ggp1.github.io/","description":"Software developer","thumbnailUrl":"https://ggp1.github.io/favicon.ico","sameAs":["https://github.com/GGP1"]}</script>
 </head>
 <body class=list id=top>
 <script>localStorage.getItem("pref-theme")==="dark"?document.body.classList.add('dark'):localStorage.getItem("pref-theme")==="light"?document.body.classList.remove('dark'):window.matchMedia('(prefers-color-scheme: dark)').matches&&document.body.classList.add('dark')</script>
@@ -80,8 +80,6 @@
 <footer class=entry-footer>
 <div class=social-icons>
 <a href=https://github.com/GGP1 target=_blank rel="noopener noreferrer me" title=Github><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentcolor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37.0 00-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44.0 0020 4.77 5.07 5.07.0 0019.91 1S18.73.65 16 2.48a13.38 13.38.0 00-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07.0 005 4.77 5.44 5.44.0 003.5 8.55c0 5.42 3.3 6.61 6.44 7A3.37 3.37.0 009 18.13V22"/></svg>
-</a>
-<a href=https://twitter.com/gastipalomeque target=_blank rel="noopener noreferrer me" title=Twitter><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentcolor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M23 3a10.9 10.9.0 01-3.14 1.53 4.48 4.48.0 00-7.86 3v1A10.66 10.66.0 013 4s-4 9 5 13a11.64 11.64.0 01-7 2c9 5 20 0 20-11.5a4.5 4.5.0 00-.08-.83A7.72 7.72.0 0023 3z"/></svg>
 </a>
 </div>
 </footer>
