--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <link rel=mask-icon href=https://ggp1.github.io/safari-pinned-tab.svg>
 <meta name=theme-color content="#2e2e33">
 <meta name=msapplication-TileColor content="#2e2e33">
-<meta name=generator content="Hugo 0.90.1">
+<meta name=generator content="Hugo 0.92.0">
 <link rel=alternate type=application/rss+xml href=https://ggp1.github.io/index.xml>
 <meta property="og:title" content="Gastón Palomeque">
 <meta property="og:description" content="Software developer">
@@ -85,6 +85,18 @@
 </footer>
 </article>
 <article class=post-entry>
+<header class=entry-header>
+<h2>Mastering SQL with Go - Part 1</h2>
+</header>
+<section class=entry-content>
+<p>I found myself using SQL a lot in one of my projects and I have learnt many things while trying to solve the problems I encountered.
+This post is the part one of a series where I will try to show how to manage data in a relational database using SQL (Postgre syntax), Go and its standard library package database/sql.
+Explaining absolutely everything would require an entire book so I will skip the subjects that most articles already cover (connection establishment, foreign keys, parameterized arguments, etc)....</p>
+</section>
+<footer class=entry-footer>January 17, 2022</footer>
+<a class=entry-link aria-label="post link to Mastering SQL with Go - Part 1" href=https://ggp1.github.io/posts/mastering_sql_with_go_p1/></a>
+</article>
+<article class=post-entry>
 <figure class=entry-cover><img loading=lazy src=https://ggp1.github.io/images/rn_list.png alt="React Native List example">
 </figure>
 <header class=entry-header>
@@ -143,7 +155,7 @@ The search for a solution along with the advances in computer science and crypto
 </article>
 </main>
 <footer class=footer>
-<span>&copy; 2021 &#183; Gastón Palomeque</span>
+<span>&copy; 2022 &#183; Gastón Palomeque</span>
 </footer>
 <a href=#top aria-label="go to top" title="Go to Top (Alt + G)">
 <button class=top-link id=top-link type=button accesskey=g><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12 6" fill="currentcolor"><path d="M12 6H0l6-6z"/></svg>
